--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,4 @@
 name: Trigger GitLab CI
-
 on:
   push:
     branches:
@@ -7,32 +6,35 @@ on:
       - dev
     tags:
       - '*'
-
 jobs:
   trigger-gitlab:
     runs-on: ubuntu-latest
-
     steps:
       - name: Compute GitLab-compatible variables
         id: vars
         run: |
           if [[ "${GITHUB_REF}" == refs/tags/* ]]; then
-            echo "CI_COMMIT_BRANCH=" >> $GITHUB_ENV
             echo "CI_COMMIT_TAG=${GITHUB_REF_NAME}" >> $GITHUB_ENV
           else
             echo "CI_COMMIT_BRANCH=${GITHUB_REF_NAME}" >> $GITHUB_ENV
-            echo "CI_COMMIT_TAG=" >> $GITHUB_ENV
           fi
-
           echo "CI_COMMIT_SHA=${GITHUB_SHA}" >> $GITHUB_ENV
           echo "CI_COMMIT_SHORT_SHA=${GITHUB_SHA::8}" >> $GITHUB_ENV
-
+      
       - name: Trigger GitLab pipeline
         run: |
-          curl -sSf -X POST "https://gitlab.com/api/v4/projects/${{ secrets.GITLAB_PROJECT_ID }}/trigger/pipeline" \
-            -F token=${{ secrets.GITLAB_TRIGGER_TOKEN }} \
-            -F ref=main \
-            -F "variables[CI_COMMIT_BRANCH]=$CI_COMMIT_BRANCH" \
-            -F "variables[CI_COMMIT_TAG]=$CI_COMMIT_TAG" \
-            -F "variables[CI_COMMIT_SHA]=$CI_COMMIT_SHA" \
-            -F "variables[CI_COMMIT_SHORT_SHA]=$CI_COMMIT_SHORT_SHA"
+          CURL_CMD=(curl -sSf -X POST "https://gitlab.com/api/v4/projects/${{ secrets.GITLAB_PROJECT_ID }}/trigger/pipeline"
+            -F token=${{ secrets.GITLAB_TRIGGER_TOKEN }}
+            -F ref=main
+            -F "variables[CI_COMMIT_SHA]=$CI_COMMIT_SHA"
+            -F "variables[CI_COMMIT_SHORT_SHA]=$CI_COMMIT_SHORT_SHA")
+          
+          if [[ -n "$CI_COMMIT_BRANCH" ]]; then
+            CURL_CMD+=(-F "variables[CI_COMMIT_BRANCH]=$CI_COMMIT_BRANCH")
+          fi
+          
+          if [[ -n "$CI_COMMIT_TAG" ]]; then
+            CURL_CMD+=(-F "variables[CI_COMMIT_TAG]=$CI_COMMIT_TAG")
+          fi
+          
+          "${CURL_CMD[@]}"
