--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,11 @@ jobs:
   trigger-gitlab:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+      
       - name: Compute GitLab-compatible variables
         id: vars
         run: |
@@ -20,6 +25,14 @@ jobs:
           fi
           echo "CI_COMMIT_SHA=${GITHUB_SHA}" >> $GITHUB_ENV
           echo "CI_COMMIT_SHORT_SHA=${GITHUB_SHA::8}" >> $GITHUB_ENV
+          
+          # Get commit message and escape it for passing as a variable
+          COMMIT_MESSAGE=$(git log -1 --pretty=%B)
+          # URL encode the commit message for safe transmission
+          COMMIT_MESSAGE_ENCODED=$(echo "$COMMIT_MESSAGE" | jq -sRr @uri)
+          echo "CI_COMMIT_MESSAGE<<EOF" >> $GITHUB_ENV
+          echo "$COMMIT_MESSAGE" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
       
       - name: Trigger GitLab pipeline
         run: |
@@ -27,7 +40,8 @@ jobs:
             -F token=${{ secrets.GITLAB_TRIGGER_TOKEN }}
             -F ref=main
             -F "variables[CI_COMMIT_SHA]=$CI_COMMIT_SHA"
-            -F "variables[CI_COMMIT_SHORT_SHA]=$CI_COMMIT_SHORT_SHA")
+            -F "variables[CI_COMMIT_SHORT_SHA]=$CI_COMMIT_SHORT_SHA"
+            -F "variables[CI_COMMIT_MESSAGE]=$CI_COMMIT_MESSAGE")
           
           if [[ -n "$CI_COMMIT_BRANCH" ]]; then
             CURL_CMD+=(-F "variables[CI_COMMIT_BRANCH]=$CI_COMMIT_BRANCH")
